- added Account controller - added configuration for Identity - added new bootstrap theme - changed styling for layout - added methods for registering and loging - created VM for Login - create Login View - created component for displaying the signed in user and sign out functionality

--- a/DeliveryCompany/DeliveryCompany/DeliveryCompany.csproj
+++ b/DeliveryCompany/DeliveryCompany/DeliveryCompany.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Constants\Constants.csproj" />
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
