--- a/DeliveryCompany/DeliveryCompany/appsettings.json
+++ b/DeliveryCompany/DeliveryCompany/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionIndentity": "Server=(localdb)\\Local; Database=DeliveryCompanyIdentity;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnectionData": "Server=(localdb)\\Local; Database=DeliveryCompanyData;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
