--- a/DeliveryCompany/Models/Models.csproj
+++ b/DeliveryCompany/Models/Models.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Constants\Constants.csproj" />
+  </ItemGroup>
+
 </Project>
