--- a/DeliveryCompany/DeliveryCompany/DeliveryCompany.csproj
+++ b/DeliveryCompany/DeliveryCompany/DeliveryCompany.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\Constants\Constants.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
 </Project>
