--- a/DeliveryCompany/DeliveryCompany/DeliveryCompany.csproj
+++ b/DeliveryCompany/DeliveryCompany/DeliveryCompany.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
 </Project>
