- refactored all the services to implement a repository pattern instead of accessing directly the db context - added new project that implements the repository pattern - added a redirect middleware to apparently fix a bug that after creating a new order woudl redirect to the INDEX witha post call instead of a get - added route attirbute for the Create method from the order controller to apprently fix a bug where the first order created would result in a 302 NOT FOUND http errore code

--- a/DeliveryCompany/Services/Services.csproj
+++ b/DeliveryCompany/Services/Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
