--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,5 +24,8 @@ jobs:
       run: dotnet restore DeliveryCompany/DeliveryCompany.sln
     - name: Build
       run: dotnet build --no-restore DeliveryCompany/DeliveryCompany.sln
-   # - name: Test
-     # run: dotnet test --no-build --verbosity normal
+    - name: Install MSTest as global tool
+      run: dotnet tool install --global Microsoft.Test.Adapter
+    - name: Run unit tests with MSTest
+      run: |
+        mstest /testcontainer:DeliveryCompany/UnitTests/bin/Debug/UnitTests.dll
